Fixed vertical scrolling on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,3 +26,9 @@
     color: var(--primary-color);
   }
 }
+
+html, body {
+  overflow-x: hidden;
+  position: relative;
+  width: 100%;
+}
